Fix header on small screens

--- a/src/About/About.css
+++ b/src/About/About.css
@@ -1,5 +1,6 @@
 
 .about-section{
+  grid: 95%;
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
   overflow-y: scroll;
@@ -24,6 +25,7 @@
 }
 
 .background-text{
+  width: 90%;
   display: flex;
   flex-direction: column;
   align-items: center;
