--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -38,15 +38,6 @@ nav{
   box-shadow: 0px 0px 5px #2a3d45;
 }
 
-.logo {
-  grid-column: 1/2;
-  align-self: center;
-  justify-self: center;
-  font-weight: 800;
-  font-size: 2em;
-  user-select: none;
-}
-
 .hovered{
   color:#9658a1;
   grid-column: 1/2;
@@ -55,4 +46,18 @@ nav{
   font-weight: 800;
   font-size: 2em;
   user-select: none;
+}
+
+@media (max-width:500px){
+  .full-name{
+    display: none;
+  }
+
+  nav{
+    grid-template-columns: 1fr;
+  }
+
+  .header-list{
+    grid-column: 1/2;
+  }
 }
